--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <button type="submit" id="enviar" name="enviar">Enviar</button>
               </div>
 
-              <input type="hidden" name="_next" value>
+              <input type="hidden" name="_next" value="https://ptorini1.github.io/PortfolioUninter/">
               <input type="hidden" name="_captcha" value="false">
             </form>
           </section>
