--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <h1>Sobre Mim</h1>
         </header>
         
+        <!--Menu inicial-->
         <nav class="menu">
           <ul class="lista">
             <li class="item-lista"><a href="#sobre" class="link">Sobre Mim</a></li>
@@ -33,10 +34,11 @@
         </nav>
     </section>
 
-
+    <!--Seção principal-->
       <main>
         <div class="container">
           <section id="sobre" class="section">
+            <!--Sobre mim-->
             <h2>Sobre Mim</h2>
             <p>
               Bem-vindo ao meu portfolio! Descubra mais sobre minha carreira, meus hobbies e minha formação acadêmica.
@@ -50,7 +52,8 @@
               Gosto de passar tempo assintindo filmes e séries, 
             </p>
           </section>
-
+          
+          <!--Portfolio-->
           <section id="portfolio" class="section">
             <h2>Portfólio</h2>
             <ul>
@@ -66,6 +69,7 @@
             </ul>
           </section>
 
+          <!--Formação academica-->
           <section id="formacao" class="section">
             <h2>Formação Acadêmica</h2>
             <ul>
@@ -79,11 +83,13 @@
             </ul>
           </section>
 
+          <!--Contato-->
           <section id="contato" class="section">
             <h2>Contato</h2>
             <p>Você pode me contatar pelo e-mail: <a href="mailto:pedrotorini123@gmail.com">pedrotorini123@gmail.com</a></p>
             <p>Ou pelo Linkedin: <a href="https://www.linkedin.com/in/pedro-torini-8a694b228/" target="_blank">Pedro Torini</a></p>
 
+            <!--Formulário funcionando-->
             <form action="https://formsubmit.co/pedrotorini123@gmail.com" method="POST">
               <h3>Formulário</h3>
               <div>
@@ -109,6 +115,7 @@
         </div>
       </main>
 
+      <!--Rodapé com javascript para data-->
       <footer class="footer">
         <p>© Copyright Pedro H S Torini - <script>document.write(new Date().getFullYear());</script></p>
       </footer>
